# DeepCode

./: .gitignore  Dockerfile  Dockerfile.multilang  GITHUB_ANIMATION_FIX.md  My Nyay Setu  README.md  code_parser.py  deepcode.py  files_parser.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml  requirements.txt  try.py
DeepCode/: README.md  deepcode_agent.py  deepcode_cli.py  fastagent.config.yaml  fastagent.secrets.yaml  paper_to_code_agents.py  setup.py  test_agent.py  test_paper.txt
Sandbox4DeepCode/: .gitignore  env_example.txt  main.py  requirements.txt  sandbox_interface.py
cli/: cli_interface.py
coder_test/: code_agent.py  code_generator.py  github_reader.py  main.py
config/: mcp_tool_definitions.py  mcp_tool_definitions_evaluation.py  mcp_tool_definitions_index.py
deepcode-mcp/: CLI_INTERFACE_README.md  PROMPT_ENHANCEMENT_README.md  QUICK_START_STREAMLIT.md  README.md  README_FILE_TREE_WORKFLOW.md  README_NEW_STRUCTURE.md  README_PDF_CONVERTER.md  README_STREAMLIT.md  UI_IMPROVEMENTS.md  __init__.py  code_prompts.py  deepcode  deepcode.Dockerfile  demo_complete_workflow.py  direct_test.md  download_arxiv_pdf.py  image_caption_generator.py  indexer_config.yaml  main.py  main_cli.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml  neural-environment.yml  paper2code.Dockerfile  paper_to_code.py  process_paper_images.py  pyproject.toml  quick_test_verification.py  read_github.py  reference_claude.txt  reference_openai.txt  requirements.txt  requirements_streamlit.txt  rice_concept_analysis.md  rice_paper_references.txt  run_indexer.py  run_streamlit.py  setup_paper2code.py  start_docker_sync.py  start_streamlit.bat  (+3 more)
deepcode-mcp/pip_config/: MANIFEST.in  __init__.py  pyproject.toml  setup_paper2code.py
logs/: mcp-agent-20250727_221452.jsonl  mcp-agent-20250727_222811.jsonl  mcp-agent-20250728_005225.jsonl  mcp-agent-20250728_011639.jsonl  mcp-agent-20250728_012240.jsonl  mcp-agent-20250728_013433.jsonl  mcp-agent-20250728_014407.jsonl  mcp-agent-20250728_015427.jsonl  mcp-agent-20250728_015523.jsonl  mcp-agent-20250728_035054.jsonl  mcp-agent-20250728_040631.jsonl  mcp-agent-20250827_160947.jsonl  mcp-agent-20250827_161516.jsonl  mcp-agent-20250827_162159.jsonl  mcp-agent-20250827_162914.jsonl  (+5 more)
(+421 files in other folders)
